# CG-2019.3

./: .editorconfig  .gitignore  README.md
activities/activity-00/: Makefile  main.cpp
laboratory/2019.10.01/: CMakeLists.txt  Makefile  main.cpp
laboratory/2019.10.15/: CMakeLists.txt  Makefile  main.cpp  vertex.vert
laboratory/2019.10.15/shaders/: fragment.frag
laboratory/2019.10.15/src/: main.cpp
laboratory/2019.11.07/: CMakeLists.txt  Makefile
laboratory/2019.11.07/src/: main.cpp  mat33.cpp  mat33.hpp
